# CmyMessage

./: Makefile  README.md  threads.c
0vulTesting/: Makefile  hash_table.c  hash_table.h  hashtable.c  queue  queue.c  scanf  scanf.c
auth/: CMakeLists.txt  Makefile  main  main.c
auth/include/: auth_utils.h
auth/src/: main.c
auth/src/utils/: auth_utils.c
clients/: CMakeLists.txt  Makefile  main  main.c
clients/assets/: another.txt  client.txt  file.txt  new.txt
clients/include/: client_utils.h  clients.h
clients/include/utils/: ftp_client.h  ftp_utils.h  net_utils_tcp.h
clients/src/: clients.c  main.c
clients/src/utils/: client_utils.c  ftp_client.c  (+2 more)
server/: CMakeLists.txt  main.c
server/include/: client_utils.h  net_utils_tcp.h
server/services/: client_handler.c  echo.c
server/src/: main.c
server/utils/: net_utils_tcp.c
services/: services_configs.json
services/0template/: CMakeLists.txt  Makefile
services/1_FTP/: Makefile  Readme.md
services/1clientHandler/: CMakeLists.txt  Makefile
services/3auth/: Dockerfile  Makefile
services/4FTP/: CMakeLists.txt
services/broadcastChat/: CMakeLists.txt  Makefile  main.c
services/broadcastChat/include/: broadcast_chat_service.h
services/broadcastChat/include/utils/: clients.h  hash_table.h  linkedlist.h  net_utils_tcp.h  queue.h  service_utils.h
services/broadcastChat/src/: broadcast_chat_service.c  main.c
services/broadcastChat/src/utils/: hash_table.c  linkedlist.c  net_utils_tcp.c  queue.c  service_utils.c
services/daytime/: daytime.c
services/directChat/: many_clients.bash
(+63 files in other folders)
